--- a/app/src/main/res/layout/controller_chat.xml
+++ b/app/src/main/res/layout/controller_chat.xml
@@ -35,7 +35,15 @@
         app:incomingTextColor="@color/nc_incoming_text_default"
         app:incomingTextLinkColor="@color/nc_incoming_text_default"
         app:incomingTextSize="@dimen/chat_text_size"
-        app:incomingTimeTextSize="12sp"
+        app:incomingTimeTextSize="12dp"
+        app:incomingBubblePaddingTop="@dimen/message_bubble_corners_padding"
+        app:incomingBubblePaddingBottom="@dimen/message_bubble_corners_padding"
+        app:incomingBubblePaddingLeft="@dimen/message_bubble_corners_padding"
+        app:incomingBubblePaddingRight="@dimen/message_bubble_corners_padding"
+        app:outcomingBubblePaddingTop="@dimen/message_bubble_corners_padding"
+        app:outcomingBubblePaddingBottom="@dimen/message_bubble_corners_padding"
+        app:outcomingBubblePaddingLeft="@dimen/message_bubble_corners_padding"
+        app:outcomingBubblePaddingRight="@dimen/message_bubble_corners_padding"
         app:outcomingDefaultBubbleColor="@color/colorPrimary"
         app:outcomingDefaultBubblePressedColor="@color/colorPrimary"
         app:outcomingDefaultBubbleSelectedColor="@color/colorPrimaryDark"
