--- a/app/src/main/res/layout/controller_chat.xml
+++ b/app/src/main/res/layout/controller_chat.xml
@@ -24,12 +24,57 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="@dimen/item_height"
+        android:layout_height="@dimen/item_height"
+        android:layout_centerInParent="true"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/colorPrimary"
+        android:indeterminateTintMode="src_in"
+        android:visibility="gone"/>
+
+    <RelativeLayout
+        android:id="@+id/emptyLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/wawingTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="👋"
+            android:textAlignment="center"
+            android:textSize="72sp"/>
+
+        <TextView
+            android:id="@+id/sendHiTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/wawingTextView"
+            android:layout_margin="8dp"
+            android:textAlignment="center"
+            android:textSize="20sp"/>
+    </RelativeLayout>
+
     <com.stfalcon.chatkit.messages.MessagesList
         android:id="@+id/messagesListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="16dp"
         android:layout_above="@+id/messageInputView"
+        android:paddingBottom="16dp"
+        android:visibility="gone"
+        app:dateHeaderTextSize="13sp"
+        app:incomingBubblePaddingBottom="@dimen/message_bubble_corners_padding"
+        app:incomingBubblePaddingLeft="@dimen/message_bubble_corners_padding"
+        app:incomingBubblePaddingRight="@dimen/message_bubble_corners_padding"
+        app:incomingBubblePaddingTop="@dimen/message_bubble_corners_padding"
         app:incomingDefaultBubbleColor="@color/white_two"
         app:incomingDefaultBubblePressedColor="@color/white_two"
         app:incomingDefaultBubbleSelectedColor="@color/transparent"
@@ -37,14 +82,10 @@
         app:incomingTextLinkColor="@color/nc_incoming_text_default"
         app:incomingTextSize="@dimen/chat_text_size"
         app:incomingTimeTextSize="12sp"
-        app:incomingBubblePaddingTop="@dimen/message_bubble_corners_padding"
-        app:incomingBubblePaddingBottom="@dimen/message_bubble_corners_padding"
-        app:incomingBubblePaddingLeft="@dimen/message_bubble_corners_padding"
-        app:incomingBubblePaddingRight="@dimen/message_bubble_corners_padding"
-        app:outcomingBubblePaddingTop="@dimen/message_bubble_corners_padding"
         app:outcomingBubblePaddingBottom="@dimen/message_bubble_corners_padding"
         app:outcomingBubblePaddingLeft="@dimen/message_bubble_corners_padding"
         app:outcomingBubblePaddingRight="@dimen/message_bubble_corners_padding"
+        app:outcomingBubblePaddingTop="@dimen/message_bubble_corners_padding"
         app:outcomingDefaultBubbleColor="@color/colorPrimary"
         app:outcomingDefaultBubblePressedColor="@color/colorPrimary"
         app:outcomingDefaultBubbleSelectedColor="@color/transparent"
@@ -52,17 +93,16 @@
         app:outcomingTextLinkColor="@color/nc_outcoming_text_default"
         app:outcomingTextSize="@dimen/chat_text_size"
         app:outcomingTimeTextSize="12sp"
-        app:dateHeaderTextSize="13sp"
         app:textAutoLink="all"/>
 
     <com.webianks.library.PopupBubble
         android:id="@+id/popupBubbleView"
-        android:layout_margin="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/separator"
-        android:paddingEnd="8dp"
         android:layout_centerHorizontal="true"
+        android:layout_margin="16dp"
+        android:paddingEnd="8dp"
         app:pb_backgroundColor="@color/colorPrimary"
         app:pb_icon="@drawable/ic_baseline_arrow_downward_24px"
         app:pb_text="@string/nc_new_messages"
