--- a/app/src/main/res/layout/library_fast_scroller_layout.xml
+++ b/app/src/main/res/layout/library_fast_scroller_layout.xml
@@ -21,25 +21,25 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginEnd="0dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
             android:layout_toStartOf="@+id/fast_scroller_handle"
             android:background="@drawable/fast_scroller_bubble"
             android:gravity="center"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:textColor="?android:attr/textColorPrimaryInverse"
             android:textSize="38sp"
             android:visibility="gone"
-            tools:visibility="visible"
-            tools:text="A" />
+            tools:text="A"
+            tools:visibility="visible"/>
 
         <ImageView
             android:id="@+id/fast_scroller_handle"
-            android:alpha="0.5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:paddingStart="6dp"
+            android:alpha="0.5"
             android:contentDescription="@null"
+            android:paddingStart="6dp"
             android:src="@drawable/fast_scroller_handle"/>
 
     </RelativeLayout>
