--- a/app/src/main/res/layout/controller_call.xml
+++ b/app/src/main/res/layout/controller_call.xml
@@ -119,7 +119,7 @@
             android:id="@+id/call_control_microphone"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginEnd="20dp"
+            android:layout_margin="24dp"
             android:alpha="0.7"
             app:checked="false"
             app:enableInitialAnimation="false"
@@ -131,7 +131,7 @@
             android:id="@+id/callControlHangupView"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginEnd="20dp"
+            android:layout_margin="24dp"
             app:checked="false"
             app:enableInitialAnimation="false"
             app:frontBackgroundColor="@color/nc_darkRed"
@@ -142,6 +142,7 @@
             android:id="@+id/call_control_camera"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_margin="24dp"
             android:alpha="0.7"
             app:checked="false"
             app:enableInitialAnimation="false"
@@ -153,6 +154,7 @@
             android:id="@+id/callControlEnableSpeaker"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_margin="24dp"
             android:visibility="gone"
             app:animateRearImage="false"
             app:checked="false"
