--- a/app/src/main/res/layout/controller_call_notification.xml
+++ b/app/src/main/res/layout/controller_call_notification.xml
@@ -29,7 +29,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/incoming_gradient">
+        android:id="@+id/incomingTextRelativeLayout">
 
         <TextView
             android:id="@+id/incomingCallTextView"
