--- a/app/src/main/res/layout/call_item.xml
+++ b/app/src/main/res/layout/call_item.xml
@@ -42,9 +42,9 @@
         android:id="@+id/remote_video_off"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        android:layout_above="@id/peer_nick_text_view"
-        android:layout_marginEnd="8dp"
+        android:layout_below="@id/peer_nick_text_view"
         android:layout_marginStart="8dp"
+        android:layout_toStartOf="@id/remote_audio_off"
         android:src="@drawable/ic_videocam_off_white_24px"
         android:visibility="invisible"/>
 
@@ -52,8 +52,10 @@
         android:id="@+id/remote_audio_off"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        android:layout_above="@id/peer_nick_text_view"
-        android:layout_toEndOf="@id/remote_video_off"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/peer_nick_text_view"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:src="@drawable/ic_mic_off_white_24px"
         android:visibility="invisible"/>
 
@@ -61,11 +63,11 @@
         android:id="@+id/peer_nick_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
         android:textColor="@android:color/white"/>
 
 </RelativeLayout>
