--- a/app/src/main/res/layout/controller_settings.xml
+++ b/app/src/main/res/layout/controller_settings.xml
@@ -132,6 +132,15 @@
             apc:mp_key="@string/nc_settings_message_ringtone_key"
             apc:mp_title="@string/nc_settings_other_notifications_ringtone"/>
 
+        <com.yarolegovich.mp.MaterialSwitchPreference
+            android:id="@+id/settings_always_vibrate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            apc:mp_key="@string/nc_settings_vibrate_key"
+            apc:mp_title="@string/nc_settings_vibrate"
+            apc:mp_summary="@string/nc_settings_vibrate_desc"
+            apc:mp_default_value="true"/>
+
     </com.yarolegovich.mp.MaterialPreferenceCategory>
 
 
