Modify default unread color
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/drawable/bubble_circle_unread.xml
+++ b/app/src/main/res/drawable/bubble_circle_unread.xml
@@ -21,7 +21,7 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="oval">
-    <solid android:color="@color/nc_darkRed" />
+    <solid android:color="#757575" />
     <stroke
         android:width="2dp"
         android:color="@color/white" />
