Move pin to favorites
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/drawable/ic_star_border_grey600_24dp.xml
+++ b/app/src/main/res/drawable/ic_star_border_grey600_24dp.xml
@@ -19,7 +19,7 @@
   -->
 
 <vector android:autoMirrored="true" android:height="24dp"
-    android:viewportHeight="16" android:viewportWidth="16"
+    android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#757575" android:pathData="m2.4185,14.474 l5.3626,-8.4634 -4.3995,-3.6912s3.3518,-2.4413 7.9548,1.3624c5.3458,4.4175 2.8373,7.5555 2.8373,7.5555l-4.2827,-3.5744z"/>
+    <path android:fillColor="#757575" android:pathData="M22,9.24l-7.19,-0.62L12,2 9.19,8.63 2,9.24l5.46,4.73L5.82,21 12,17.27 18.18,21l-1.63,-7.03L22,9.24zM12,15.4l-3.76,2.27 1,-4.28 -3.32,-2.88 4.38,-0.38L12,6.1l1.71,4.04 4.38,0.38 -3.32,2.88 1,4.28L12,15.4z"/>
 </vector>
