Lots of work on files preview

--- a/app/src/main/res/layout/view_message_input.xml
+++ b/app/src/main/res/layout/view_message_input.xml
@@ -35,8 +35,7 @@
         android:id="@id/attachmentButtonSpace"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_toEndOf="@id/attachmentButton"
-        android:layout_toRightOf="@id/attachmentButton"/>
+        android:layout_toEndOf="@id/attachmentButton"/>
 
     <com.kevalpatel2106.emoticongifkeyboard.widget.EmoticonEditText
         android:id="@id/messageInput"
@@ -44,8 +43,6 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toEndOf="@id/attachmentButtonSpace"
-        android:layout_toLeftOf="@id/sendButtonSpace"
-        android:layout_toRightOf="@id/attachmentButtonSpace"
         android:layout_toStartOf="@id/sendButtonSpace"
         android:inputType="textAutoCorrect|textAutoComplete|textMultiLine|textCapSentences"/>
 
@@ -53,7 +50,6 @@
         android:id="@id/sendButtonSpace"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_toLeftOf="@id/messageSendButton"
         android:layout_toStartOf="@id/messageSendButton"/>
 
     <ImageButton
@@ -61,7 +57,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"/>
 
 </merge>
