--- a/app/src/main/res/layout/controller_chat.xml
+++ b/app/src/main/res/layout/controller_chat.xml
@@ -92,6 +92,10 @@
         app:outcomingTextLinkColor="@color/nc_outcoming_text_default"
         app:outcomingTextSize="@dimen/chat_text_size"
         app:outcomingTimeTextSize="12sp"
+        app:outcomingImageTimeTextSize="12sp"
+        app:incomingImageTimeTextSize="12sp"
+        app:outcomingImageTimeTextColor="@color/white60"
+        app:incomingImageTimeTextColor="@color/warm_grey_four"
         app:textAutoLink="all"/>
 
     <com.webianks.library.PopupBubble
