--- a/app/src/main/res/drawable/ic_info_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_info_black_24dp.xml
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Nextcloud Talk application
   ~
   ~ @author Mario Danic
-  ~ Copyright (C) 2017 Mario Danic <mario@lovelyhq.com>
+  ~ Copyright (C) 2017-2018 Mario Danic <mario@lovelyhq.com>
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -19,17 +18,8 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<resources>
-    <array name="proxy_type_descriptions">
-        <item>No proxy</item>
-        <item>HTTP</item>
-        <item>DIRECT</item>
-        <item>SOCKS</item>
-    </array>
-
-    <array name="message_notification_levels">
-        <item>@string/nc_notify_me_never</item>
-        <item>@string/nc_notify_me_mention</item>
-        <item>@string/nc_notify_me_always</item>
-    </array>
-</resources>
+<vector android:autoMirrored="true" android:height="24dp"
+    android:tint="#FFFFFF" android:viewportHeight="24.0"
+    android:viewportWidth="24.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM13,17h-2v-6h2v6zM13,9h-2L11,7h2v2z"/>
+</vector>
