--- a/app/src/main/res/layout/rv_item_participant.xml
+++ b/app/src/main/res/layout/rv_item_participant.xml
@@ -25,7 +25,7 @@
     android:layout_height="@dimen/item_height"
     android:orientation="vertical">
 
-    <com.nextcloud.talk.utils.MagicFlipView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <com.nextcloud.talk.utils.MagicFlipView
         android:id="@+id/avatar_flip_view"
         android:layout_width="@dimen/avatar_size"
         android:layout_height="@dimen/avatar_size"
