--- a/app/src/main/res/layout/controller_call.xml
+++ b/app/src/main/res/layout/controller_call.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Nextcloud Talk application
   ~
   ~ @author Mario Danic
@@ -20,13 +19,13 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/relative_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/grey950"
-                android:fitsSystemWindows="true"
-                tools:context=".activities.MagicCallActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relative_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/grey950"
+    android:fitsSystemWindows="true"
+    tools:context=".activities.MagicCallActivity">
 
     <RelativeLayout
         android:id="@+id/connectingRelativeLayoutView"
@@ -38,13 +37,13 @@
             android:layout_width="@dimen/item_height"
             android:layout_height="@dimen/item_height"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:indeterminate="true"
             android:indeterminateTint="@color/colorPrimary"
-            android:indeterminateTintMode="src_in"/>
+            android:indeterminateTintMode="src_in" />
 
         <TextView
             android:id="@+id/connectingTextView"
@@ -55,7 +54,7 @@
             android:layout_margin="16dp"
             android:text="@string/nc_connecting_call"
             android:textAlignment="center"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white" />
 
     </RelativeLayout>
 
@@ -71,14 +70,13 @@
             android:layout_height="match_parent"
             android:animateLayoutChanges="true"
             android:background="@color/grey950"
-            android:orientation="vertical">
-        </LinearLayout>
+            android:orientation="vertical"></LinearLayout>
 
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true">
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true">
 
             <org.webrtc.SurfaceViewRenderer
                 android:id="@+id/pip_video_view"
@@ -86,10 +84,9 @@
                 android:layout_height="120dp"
                 android:layout_gravity="center"
                 android:layout_margin="16dp"
-                android:visibility="invisible"/>
+                android:visibility="invisible" />
 
-            <com.nextcloud.talk.utils.MagicFlipView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <com.nextcloud.talk.utils.MagicFlipView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/call_control_switch_camera"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
@@ -99,71 +96,79 @@
                 app:checked="false"
                 app:enableInitialAnimation="false"
                 app:frontBackgroundColor="@color/colorPrimary"
-                app:frontImage="@drawable/ic_switch_video_white_24px"/>
+                app:frontImage="@drawable/ic_switch_video_white_24px" />
         </FrameLayout>
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/callControlsLinearLayoutView"
+    <RelativeLayout
+        android:id="@+id/callControlsRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:animateLayoutChanges="true"
-        android:background="@android:color/transparent"
-        android:gravity="center">
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
+        android:animateLayoutChanges="true">
 
-        <com.nextcloud.talk.utils.MagicFlipView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/call_control_microphone"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_margin="24dp"
-            android:alpha="0.7"
-            app:checked="false"
-            app:enableInitialAnimation="false"
-            app:frontBackgroundColor="@color/colorPrimary"
-            app:frontImage="@drawable/ic_mic_off_white_24px"/>
-
-        <com.nextcloud.talk.utils.MagicFlipView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <com.nextcloud.talk.utils.MagicFlipView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/callControlHangupView"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_margin="24dp"
+            android:layout_above="@id/callControlsLinearLayoutView"
+            android:layout_centerHorizontal="true"
             app:checked="false"
             app:enableInitialAnimation="false"
             app:frontBackgroundColor="@color/nc_darkRed"
-            app:frontImage="@drawable/ic_call_end_white_24px"/>
+            app:frontImage="@drawable/ic_call_end_white_24px" />
 
-        <com.nextcloud.talk.utils.MagicFlipView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/call_control_camera"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_margin="24dp"
-            android:alpha="0.7"
-            app:checked="false"
-            app:enableInitialAnimation="false"
-            app:frontBackgroundColor="@color/colorPrimary"
-            app:frontImage="@drawable/ic_videocam_off_white_24px"/>
+        <LinearLayout
+            android:id="@+id/callControlsLinearLayoutView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="24dp"
+            android:animateLayoutChanges="true"
+            android:background="@android:color/transparent"
+            android:gravity="center">
 
-        <com.nextcloud.talk.utils.MagicFlipView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/callControlEnableSpeaker"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_margin="24dp"
-            android:visibility="gone"
-            app:animateRearImage="false"
-            app:checked="false"
-            app:enableInitialAnimation="false"
-            app:frontBackgroundColor="@color/colorPrimary"
-            app:frontImage="@drawable/ic_volume_up_white_24dp"
-            app:rearBackgroundColor="@color/colorPrimaryDark"
-            app:rearImage="@drawable/ic_volume_up_white_24dp"/>
+            <com.nextcloud.talk.utils.MagicFlipView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/call_control_microphone"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="24dp"
+                android:alpha="0.7"
+                app:checked="false"
+                app:enableInitialAnimation="false"
+                app:frontBackgroundColor="@color/colorPrimary"
+                app:frontImage="@drawable/ic_mic_off_white_24px" />
 
-    </LinearLayout>
+            <com.nextcloud.talk.utils.MagicFlipView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/call_control_camera"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:alpha="0.7"
+                app:checked="false"
+                app:enableInitialAnimation="false"
+                app:frontBackgroundColor="@color/colorPrimary"
+                app:frontImage="@drawable/ic_videocam_off_white_24px" />
 
+            <com.nextcloud.talk.utils.MagicFlipView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/callControlEnableSpeaker"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:visibility="gone"
+                app:animateRearImage="false"
+                app:checked="false"
+                app:enableInitialAnimation="false"
+                app:frontBackgroundColor="@color/colorPrimary"
+                app:frontImage="@drawable/ic_volume_up_white_24dp"
+                app:rearBackgroundColor="@color/colorPrimaryDark"
+                app:rearImage="@drawable/ic_volume_up_white_24dp" />
+
+        </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
