--- a/app/src/main/res/drawable/incoming_corners.xml
+++ b/app/src/main/res/drawable/incoming_corners.xml
@@ -19,14 +19,10 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle">
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-    <corners
-        android:topLeftRadius="6dp"
-        android:bottomRightRadius="6dp"
-        android:bottomLeftRadius="@dimen/message_bubble_corners_radius"
-        android:topRightRadius="0dp" />
-
+    <corners android:radius="@dimen/message_bubble_corners_radius" />
     <solid android:color="@color/nc_white_color" />
 </shape>
