--- a/app/src/main/res/layout/item_custom_incoming_preview_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_preview_message.xml
@@ -19,6 +19,7 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
@@ -26,24 +27,26 @@
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="2dp">
 
-    <com.stfalcon.chatkit.utils.ShapeImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@id/messageUserAvatar"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        app:roundAsCircle="true" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/messageUserAvatar"
-        android:background="@drawable/shape_preview_text_incoming_message">
+        android:layout_toEndOf="@id/messageUserAvatar">
 
-        <com.stfalcon.chatkit.utils.RoundedImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true" />
+            android:layout_width="480px"
+            android:layout_height="480px"
+            android:adjustViewBounds="true"
+            app:actualImageScaleType="fitCenter" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -51,27 +54,25 @@
             android:layout_below="@id/image"
             android:layout_alignStart="@+id/image"
             android:layout_alignEnd="@id/image"
-            android:layout_margin="8dp">
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
 
             <com.kevalpatel2106.emoticongifkeyboard.widget.EmoticonTextView
                 android:id="@id/messageText"
                 android:layout_width="wrap_content"
+                android:textColorLink="@color/warm_grey_four"
                 android:layout_height="wrap_content"
-                android:textColor="@color/dark_grey_two"
+                android:autoLink="all"
+                android:textColor="@color/warm_grey_four"
                 android:textIsSelectable="true"
-                android:textSize="14sp" />
-
-            <View
-                android:id="@id/imageOverlay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@id/messageTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/messageText"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                android:textColor="@color/warm_grey_four" />
 
         </RelativeLayout>
 
