--- a/app/src/main/res/layout/item_custom_incoming_text_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_text_message.xml
@@ -27,10 +27,11 @@
     android:layout_marginRight="16dp"
     android:layout_marginBottom="2dp">
 
-    <com.stfalcon.chatkit.utils.ShapeImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@id/messageUserAvatar"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        app:roundAsCircle="true"
         android:layout_alignParentTop="true"
         android:layout_marginEnd="8dp" />
 
