Clean up some of the lint warnings
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/item_custom_incoming_preview_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_preview_message.xml
@@ -20,6 +20,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
@@ -46,7 +47,8 @@
             android:layout_width="480px"
             android:layout_height="480px"
             android:adjustViewBounds="true"
-            app:actualImageScaleType="fitCenter" />
+            app:actualImageScaleType="fitCenter"
+            tools:ignore="PxUsage" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
