--- a/app/src/main/res/drawable/ic_info_white_24dp.xml
+++ b/app/src/main/res/drawable/ic_info_white_24dp.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<!--
   ~ Nextcloud Talk application
   ~
   ~ @author Mario Danic
@@ -18,21 +18,8 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/action_search"
-        android:animateLayoutChanges="true"
-        android:icon="@drawable/ic_search_white_24dp"
-        android:title="@string/nc_search"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"
-        app:showAsAction="collapseActionView|always" />
-
-    <item
-        android:id="@+id/contacts_selection_done"
-        android:title="@string/nc_contacts_done"
-        android:transitionName="userAvatar.transitionTag"
-        android:visible="false"
-        app:showAsAction="always" />
-</menu>
+<vector android:autoMirrored="true" android:height="24dp"
+    android:tint="#FFFFFF" android:viewportHeight="24.0"
+    android:viewportWidth="24.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM13,17h-2v-6h2v6zM13,9h-2L11,7h2v2z"/>
+</vector>
