--- a/app/src/main/res/layout/item_custom_incoming_text_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_text_message.xml
@@ -54,7 +54,7 @@
             android:textColor="@color/colorPrimary"
             android:textSize="12sp" />
 
-        <com.kevalpatel2106.emoticongifkeyboard.widget.EmoticonTextView
+        <androidx.emoji.widget.EmojiTextView
             android:id="@id/messageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
