--- a/app/src/main/res/layout/item_custom_outcoming_preview_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_preview_message.xml
@@ -46,7 +46,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp">
 
-        <com.kevalpatel2106.emoticongifkeyboard.widget.EmoticonTextView
+        <com.vanniktech.emoji.EmojiTextView
             android:id="@id/messageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
