--- a/app/src/main/res/layout/view_message_input.xml
+++ b/app/src/main/res/layout/view_message_input.xml
@@ -35,11 +35,12 @@
         android:layout_height="0dp"
         android:layout_toEndOf="@id/attachmentButton" />
 
-    <com.kevalpatel2106.emoticongifkeyboard.widget.EmoticonEditText
+    <com.vanniktech.emoji.EmojiEditText
         android:id="@id/messageInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:imeOptions="actionDone|flagNoFullscreen"
         android:layout_toStartOf="@id/sendButtonSpace"
         android:inputType="textAutoCorrect|textMultiLine|textCapSentences"/>
 
@@ -47,7 +48,17 @@
         android:id="@id/sendButtonSpace"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_toStartOf="@id/messageSendButton" />
+        android:layout_toStartOf="@id/smileyButton"/>
+
+    <ImageButton
+        android:id="@+id/smileyButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_smiley"
+        android:layout_toStartOf="@id/messageSendButton"
+        android:background="@color/transparent"
+        android:layout_marginEnd="8dp"
+        android:layout_centerVertical="true"/>
 
     <ImageButton
         android:id="@id/messageSendButton"
