Fix crashing bug & Tag v3.2.0beta4
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/item_custom_incoming_text_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_text_message.xml
@@ -54,7 +54,7 @@
             android:textColor="@color/colorPrimary"
             android:textSize="12sp" />
 
-        <androidx.emoji.widget.EmojiTextView
+        <com.vanniktech.emoji.EmojiTextView
             android:id="@id/messageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
